# Linaa

lina/: pyproject.toml
lina/config/: lina.yaml
lina/data/: lina_test.db
lina/data/chroma/: chroma.sqlite3
lina/kernel/authz/: __init__.py  framework.py  pending_approvals.py  policy.py  scope_matcher.py
lina/kernel/config/: __init__.py  exceptions.py  loader.py  schema.py  settings.py
lina/kernel/entities/: __init__.py  agent_session.py  asset.py  base.py  credential.py  engagement.py  enums.py  event.py  exceptions.py  finding.py  report.py  target.py  tool_execution.py
lina/kernel/events/: __init__.py  audit_sink.py  catalog.py  in_memory_bus.py  matcher.py
lina/kernel/knowledge_graph/: path_finder.py  sqlite_adapter.py
lina/kernel/knowledge_graph/db/: __init__.py  models.py
lina/kernel/memory_engine/: __init__.py  chroma_adapter.py  collection_naming.py
lina/kernel/model_router/: __init__.py  message_adapter.py  ollama_adapter.py  routing_policy.py
lina/kernel/ports/: __init__.py  authz.py  event_bus.py  exceptions.py  knowledge_graph.py  mcp.py  memory_engine.py  model_router.py  prompt_registry.py  repository.py  tool_runtime.py  unit_of_work.py  workflow_engine.py
lina/kernel/prompt_registry/: __init__.py  renderer.py  sqlalchemy_adapter.py
lina/kernel/prompt_registry/db/: __init__.py  (+1 more)
lina/kernel/runtime/: __init__.py  container.py  logging_setup.py  unit_of_work.py
lina/kernel/tool_runtime/: __init__.py  output_capture.py  registry.py  subprocess_runtime.py
lina/sdk/: __init__.py  agent_base.py  context.py  decorators.py  exceptions.py  plugin_base.py  tool_base.py
(+35 files in other folders)
