[project]
name = "lina"
version = "0.1.0"
description = "LINA AI Security Operating System — local, plugin-based, authorized security assessment platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "LINA Project" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.39.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.3",
    "chromadb>=0.5.15",
    "structlog>=24.4.0",
    "langgraph>=0.2.34",
    "langchain-core>=0.3.10",
    "ollama>=0.3.3",
    "httpx>=0.27.2",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "orjson>=3.10.7",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "ruff>=0.6.9",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel", "sdk", "plugins", "api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["ollama.*", "chromadb.*"]
ignore_missing_imports = true
